# wild-dust

./: .gitignore  CMakeLists.txt  README.md
Binaries/Config/: Dedicated.cfg  Game.cfg  Listen.cfg
Content/Animations/: Bandit.xml  Cowboy.xml
Content/Maps/: Default.tmx  Desert.tmx
Content/Shaders/: 2D.frag  2D.vert  Font.frag
Source/: CMakeLists.txt  Main.cpp
Source/Audio/: Audio.cpp  Audio.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt  Music.cpp  Music.h  Precompiled.h  SoundEffect.h
Source/Client/: AnimationRenderer.cpp  AnimationRenderer.h  AnimationSheet.cpp  AnimationSheet.h  Audio.cpp  Audio.h  AudioSystem.cpp  BlendMode.h  CL_Entity.cpp  CL_Entity.h  CL_PhysicsEntity.cpp  CL_PhysicsEntity.h  CL_Player.cpp  CL_Player.h  CL_Projectile.cpp  CL_Projectile.h  CL_Prop.cpp  CL_Prop.h  CL_Sky.cpp  CL_Sky.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraTarget.h  Client.cpp  Client.h  ClientWorld.cpp  ClientWorld.h  Entity.cpp  Entity.h  EntityRegistration.cpp  EntityRegistration.h  Font.cpp  GUI.cpp  GUI.h  Input.cpp  Input.h  Map.cpp  Map.h  Music.h  (+21 more)
Source/Core/: BitStream.h  CMakeLists.txt  Clock.cpp  Clock.h  Collision.cpp  Collision.h  CommandSnapshot.h  Config.cpp  Config.h  Controller.h  Core.cpp  Core.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  EntityRepresentation.h  EventEmitter.cpp  EventEmitter.h  GibCollectionEntity.cpp  GibCollectionEntity.h  InputBase.h  Logger.cpp  Logger.h  PlayerState.h  Precompiled.h  Rect.h  SpriteAnimation.h  SpriteAnimator.cpp  SpriteAnimator.h  StarsEntity.cpp  StarsEntity.h  TilemapEntity.cpp  TilemapEntity.h  TransformSnapshot.h  World.cpp  World.h  WorldCollision.h
Source/DedicatedServer/: CMakeLists.txt  Main.cpp
Source/Game/: CMakeLists.txt  Damager.h  EntityFactory.cpp  EntityFactory.h  GameContext.h  GibSpawner.h  LocalProjectileController.cpp  LocalProjectileController.h  Main.cpp  Main.cpp.bak  PlayerController.cpp  PlayerController.h  Precompiled.h  ProjectileController.cpp  ProjectileController.h  ProjectileFactory.cpp  ProjectileFactory.h  ProjectileSpawner.h  RemotePlayerController.cpp  RemotePlayerController.h
Source/Input/: CMakeLists.txt  Input.cpp  Input.h  Precompiled.h
Source/Network/: CMakeLists.txt  ClientConnectionData.h  Connection.cpp  Connection.h  Precompiled.h
Source/Physics/: CMakeLists.txt  Physics.cpp  Physics.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsObjectType.h  PlayerMovement.cpp  PlayerMovement.h  Precompiled.h
Source/Renderer/: CMakeLists.txt  Font.h  GUI.cpp  GUI.h  GUIData.h  Precompiled.h  RenderGather.cpp  RenderGather.h  Renderer.cpp  Renderer.h  SDLContext.cpp  SDLContext.h  Shader.cpp  Shader.h  SpriteBatcher.h  Texture.cpp  Texture.h  WorldRenderer.cpp
Source/Serialization/: CMakeLists.txt  EntitySerializer.cpp  EntitySerializer.h  Precompiled.h
Source/Server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  CollisionFilters.h  Entity.cpp  Entity.h  EntityRegistration.cpp  EntityRegistration.h  Map.cpp  Map.h  Player.cpp  Player.h  Precompiled.h  Projectile.cpp  Projectile.h  SV_Entity.cpp  SV_Entity.h  SV_PhysicsEntity.cpp  SV_PhysicsEntity.h  SV_Player.cpp  SV_Player.h  SV_Projectile.cpp  SV_Projectile.h  SV_Prop.cpp  SV_Prop.h  Server.cpp  Server.h  ServerWorld.cpp  ServerWorld.h  World.cpp  World.h
Source/Shared/: AnimationSheet.cpp  AnimationSheet.h  CMakeLists.txt  CharacterAnimationSet.cpp  CharacterAnimationSet.h  ClientCommand.h  EntityTypes.h  PlayerInput.h  PlayerState.h  Precompiled.h  Protocol.h  Teams.h
Source/WildDust/: CMakeLists.txt  Main.cpp
