file(GLOB SOURCES *.cpp)
file(GLOB HEADERS *.h)
add_pch(Precompiled.h Precompiled.cpp ${SOURCES})
add_definitions(-DBUILDING_SERVER)
add_library(Server SHARED ${SOURCES} ${HEADERS})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(Server ${ENET_LIBS})
target_link_libraries(Server ${BOX2D_LIBS})
target_link_libraries(Server ${TMXPARSER_LIBS})
target_link_libraries(Server Core)
target_link_libraries(Server Physics)
target_link_libraries(Server Shared)